# hp

./: .bandit  .coverage  .djlintrc  .dockerignore  .env.example  .flake8  .gcloudignore  .gitignore  .lighthouserc.json  .nixpacks.json  .pre-commit-config.yaml  .railwayignore  .safety-policy.json  .stylelintrc  ACCESSIBILITY_AUDIT_REPORT.md  ACCESSIBILITY_GUIDELINES.md  ACCESSIBILITY_SEO_IMPLEMENTATION_SUMMARY.md  AGENTS.md  Building  CACHING_SYSTEM.md  CELERY_SETUP.md  CODE_REVIEW_CHECKLIST.md  CSS_OPTIMIZATION_SUMMARY.md  Collecting  Commit  DEPLOYMENT_GUIDE_GCLOUD.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.railway  ENVIRONMENT_VARIABLES.md  FONT_OPTIMIZATION_SUMMARY.md  GEMINI.md  Git.bat  GİT.bat  I18N_AUDIT_REPORT.json  ICON_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_MONITORING_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  (+75 more)
.claude/: CLAUDE.md  settings.local.json
archive/: Dockerfile.gcloud.yedek  FINAL_TEST_REPORT.txt  bandit_report.json  baseline_bandit.json  baseline_bandit_report.json  celery.py  locustfile.py  make.ps1  radon_complexity_raw.json  roadmap.txt  start_celery_services.py  start_dev.bat  task.txt
blog/: admin.py  serializers.py
contact/: urls.py
docs/: CI_CD_SECRETS.md  COMPREHENSIVE_RESOLUTION_REPORT.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM_TOKENS.md  ISSUE_RESOLUTION_SUMMARY.md  MONITORING_SETUP.md  MULTILINGUAL_POC_PLAN.md  PHASE_15_IMPLEMENTATION.md  README.md  REDIS_CONFIGURATION.md  SEARCH_IMPLEMENTATION_COMPLETE.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SEARCH_MODELS_INDEX.md  SEARCH_SETUP.md  SEARCH_TESTS_README.md  TASK_11.1_IMPLEMENTATION_REPORT.md  TASK_11.2_COMPLETION_REPORT.md  TASK_12.1_CSS_CONSOLIDATION_REPORT.md  TASK_12.2_JS_BUNDLE_ANALYSIS_REPORT.md  TASK_13.1_COMPONENT_MODULARIZATION_REPORT.md  TASK_13.2_UI_KIT_SYNCHRONIZATION_REPORT.md  TASK_14_CONTENT_MANAGEMENT_REPORT.md  TASK_9_COMPLETION_REPORT.md  WYSIWYG_EVALUATION.md  accessibility-checklist.md  code-quality-baseline.md  performance-notes.md  ui-before-after.md  ui-issue-tracker.md
frontend/: playwright.config.js  vitest.config.js
main/: admin.py  feeds.py  filters.py  middleware.py  search.py  sitemaps.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
playwright-report/: index.html  results.json
portfolio_site/: Procfile  __init__.py  asgi.py  celery.py  railway.json  update_personal_info.py  urls.py  views.py  wsgi.py
project/: .gitignore  Procfile  __init__.py  asgi.py  manage_data.py  railway.json  requirements.txt  reset_admin_password.py  settings.py  update_personal_data.py  update_personal_info.py  urls.py  urls_simple.py  views.py  wsgi.py
reports/: bandit_high_only.json  bandit_security.json  performance_metrics.json  test_output.json
requirements/: base.txt  development.txt  production.txt  security.txt  testing.txt
scripts/: accessibility-audit.js  add_complexity_noqa.py  analyze-bundle.js  backup-database.sh  clean-unused-files.js  cleanup-unused.js  compress-images.js  db_init.sql  docker-build.sh  docker-test.sh  extract-critical-css.js  fix_md5_security.py  format.py  (+34 more)
(+958 files in other folders)
